--- a/application/index/view/login_register.html
+++ b/application/index/view/login_register.html
@@ -1,21 +1,21 @@
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>注册</title>
-	<script src="/public/js/rem.js"></script>
-	<link rel="stylesheet" href="__PUBLIC__css/reset.css">
-	<link rel="stylesheet" href="__PUBLIC__css/base.css" />
-	<link rel="stylesheet" href="__PUBLIC__css/register.css">
-	<link rel="stylesheet" href="__PUBLIC__css/public/alertWrap.css">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<title>注册</title>
+		<script src="/public/js/rem.js"></script>
+		<link rel="stylesheet" href="__PUBLIC__css/reset.css">
+		<link rel="stylesheet" href="__PUBLIC__css/base.css" />
+		<link rel="stylesheet" href="__PUBLIC__css/register.css">
+		<link rel="stylesheet" href="__PUBLIC__css/public/alertWrap.css">
 	<script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js">
-	</script>
-</head>
+</script>
+	</head>
 
-<body>
-<div class="registerbox">
-	<div class="header-zp">
+	<body>
+			<div class="registerbox">
+				<div class="header-zp">
 					<span class="return" onclick="javascript:history.back(-1)">
 											<img src="__PUBLIC__images/return-zp@2x.png" /></span>
 		<h3>注册</h3>
@@ -29,69 +29,82 @@
 					<img src="__PUBLIC__images/login/user.png" alt="">
 					<input type="text" placeholder="请输入用户名 6~16位" name="uname" value class="pptt username ">
 				</div>
-			</div>
-			<div class="info mistake"></div>
-			<div class="from-group">
-				<span class="from-tit">密码:</span>
-				<div class="from-icon">
-					<img src="__PUBLIC__images/login/suo.png" alt="">
-					<input type="password" placeholder="请输入密码 6~16位" name="pwd" value class="pptt password">
-				</div>
-			</div>
-			<div class="info mistake"></div>
-			<div class="from-group">
-				<span class="from-tit">确认密码:</span>
-				<div class="from-icon">
-					<img src="__PUBLIC__images/login/suo.png" alt="">
-					<input type="password" placeholder="再次确认密码" name="pwd2" value class="pptt affirmpwd">
-				</div>
-			</div>
-			<div class="info mistake"></div>
-			<div class="from-group">
-				<span class="from-tit">邮箱:</span>
-				<div class="from-icon">
-					<img src="__PUBLIC__images/login/youxiang.png" alt="">
-					<input type="text" placeholder="请输入用户邮箱" name="email" value class="pptt email">
-				</div>
-			</div>
-			<div class="info mistake"></div>
-			<div class="from-group">
-				<span class="from-tit">手机号:</span>
-				<div class="from-icon">
-					<img src="__PUBLIC__images/login/shouji.png" alt="">
-					<input type="phone" placeholder="请输入手机号码" name="phone"  value class="pptt phone">
-				</div>
-			</div>
-			<div class="info mistake"></div>
-			<div class="from-group ">
-				<span class="from-tit">推荐码:</span>
-				<div class="from-icon">
-					<img src="__PUBLIC__images/login/good.png" alt="">
-					<input type="text" placeholder="请输入推荐码" name="directname" value class="pptt recommend">
+				<div class="reg-new-page">
+					<form action="{:url('index/login/regis')}" method="post" class="reg-from">
+						<div class="info mistake"></div>
+						<div class="from-group">
+							<span class="from-tit">用户名:</span>
+							<div class="from-icon">
+								<img src="__PUBLIC__images/login/user.png" alt="">
+								<input type="text" placeholder="请输入用户名 6~16位" name="uname" value class="pptt username ">
+							</div>
+						</div>
+						<div class="info mistake"></div>	
+						<div class="from-group">
+							<span class="from-tit">密码:</span>
+							<div class="from-icon">
+								<img src="__PUBLIC__images/login/suo.png" alt="">
+								<input type="password" placeholder="请输入密码 6~16位" name="pwd" value class="pptt password">
+							</div>
+						</div>
+						<div class="info mistake"></div>
+					<div class="from-group">
+						<span class="from-tit">确认密码:</span>
+						<div class="from-icon">
+							<img src="__PUBLIC__images/login/suo.png" alt="">
+							<input type="password" placeholder="再次确认密码" name="pwd2" value class="pptt affirmpwd">
+						</div>
+					</div>
+						<div class="info mistake"></div>
+						<div class="from-group">
+							<span class="from-tit">邮箱:</span>
+							<div class="from-icon">
+								<img src="__PUBLIC__images/login/youxiang.png" alt="">
+								<input type="text" placeholder="请输入用户邮箱" name="email" value class="pptt email">
+							</div>
+						</div>
+						<div class="info mistake"></div>
+						<div class="from-group">
+							<span class="from-tit">手机号:</span>
+							<div class="from-icon">
+								<img src="__PUBLIC__images/login/shouji.png" alt="">
+								<input type="phone" placeholder="请输入手机号码" name="phone"  value class="pptt phone">
+							</div>
+						</div>
+						<div class="info mistake"></div>
+						<div class="from-group ">
+							<span class="from-tit">推荐码:</span>
+							<div class="from-icon">
+								<img src="__PUBLIC__images/login/good.png" alt="">
+								<input type="text" placeholder="请输入推荐码" name="directname" value class="pptt recommend">
+							</div>
+						</div>
+						<div class="send-codemsg mistake info"></div>
+						<div class="from-group ">
+							<span class="from-tit">验证码:</span>
+							<div class="from-icon from-verify">
+								<img src="__PUBLIC__images/login/yanz.png" alt="">
+								<input type="text" placeholder="请输入验证码" value name="verify" class="pptt verify">
+							</div>
+							<button class="send-code" type="button">获取验证码</button>
+						</div>
+						<div class="from-group policy">
+							<span class="from-cc acc">是否同意政策</span>
+							<i class=" icon "></i>
+							<span class="info "></span>
+						</div>
+						<div class="reg-btn">
+							<button type="button" class="btn dis" disabled=disabled>注册</button>
+						</div>
+					</form>
+					<div class="login-new">
+						<a href="{:url('login/index')}" class="register">已有账号 登录</a>
+						<a href="">用户协议</a>
+					</div>
 				</div>
 			</div>
 			<div class="send-codemsg mistake info"></div>
-			<div class="from-group ">
-				<span class="from-tit">验证码:</span>
-				<div class="from-icon from-verify">
-					<img src="__PUBLIC__images/login/yanz.png" alt="">
-					<input type="text" placeholder="请输入验证码" value name="verify" class="pptt verify">
-				</div>
-				<button class="send-code" type="button">获取验证码</button>
-			</div>
-			<div class="from-group policy">
-				<span class="from-cc acc">是否同意政策</span>
-				<i class=" icon "></i>
-				<span class="info "></span>
-			</div>
-			<div class="reg-btn">
-				<button type="button" class="btn dis" disabled=disabled>注册</button>
-			</div>
 		</form>
-		<div class="login-new">
-			<a href="{:url('login/index')}" class="register">已有账号 登录</a>
-			<a href="">用户协议</a>
-		</div>
 	</div>
 </div>
 </body>
