--- a/application/index/view/login_register.html
+++ b/application/index/view/login_register.html
@@ -9,8 +9,7 @@
 		<link rel="stylesheet" href="__PUBLIC__css/base.css" />
 		<link rel="stylesheet" href="__PUBLIC__css/register.css">
 		<link rel="stylesheet" href="__PUBLIC__css/public/alertWrap.css">
-	<script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js">
-</script>
+		<script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
 	</head>
 
 	<body>
@@ -19,16 +18,12 @@
 					<span class="return" onclick="javascript:history.back(-1)">
 											<img src="__PUBLIC__images/return-zp@2x.png" /></span>
 		<h3>注册</h3>
-	</div>
+				</div>
+			</div>
 	<div class="reg-new-page">
 		<form action="{:url('index/login/regis')}" method="post" class="reg-from">
 			<div class="info mistake"></div>
-			<div class="from-group">
-				<span class="from-tit">用户名:</span>
-				<div class="from-icon">
-					<img src="__PUBLIC__images/login/user.png" alt="">
-					<input type="text" placeholder="请输入用户名 6~16位" name="uname" value class="pptt username ">
-				</div>
+
 				<div class="reg-new-page">
 					<form action="{:url('index/login/regis')}" method="post" class="reg-from">
 						<div class="info mistake"></div>
