--- a/application/index/view/login_register.html
+++ b/application/index/view/login_register.html
@@ -9,20 +9,19 @@
 		<link rel="stylesheet" href="__PUBLIC__css/base.css" />
 		<link rel="stylesheet" href="__PUBLIC__css/register.css">
 		<link rel="stylesheet" href="__PUBLIC__css/public/alertWrap.css">
-		<script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
+	<script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js">
+</script>
 	</head>
 
 	<body>
 			<div class="registerbox">
 				<div class="header-zp">
 					<span class="return" onclick="javascript:history.back(-1)">
-											<img src="__PUBLIC__images/return-zp@2x.png" /></span>
-		<h3>注册</h3>
+						<img src="__PUBLIC__images/return-zp@2x.png" />
+					</span>
+					<h3>注册</h3>
 				</div>
 			</div>
-	<div class="reg-new-page">
-		<form action="{:url('index/login/regis')}" method="post" class="reg-from">
-			<div class="info mistake"></div>
 
 				<div class="reg-new-page">
 					<form action="{:url('index/login/regis')}" method="post" class="reg-from">
@@ -97,11 +96,6 @@
 						<a href="">用户协议</a>
 					</div>
 				</div>
-			</div>
-			<div class="send-codemsg mistake info"></div>
-		</form>
-	</div>
-</div>
 </body>
 <script src="__PUBLIC__js/base.js"></script>
 <script src="__PUBLIC__js/register.js"></script>
