--- a/application/index/view/login_register.html
+++ b/application/index/view/login_register.html
@@ -70,7 +70,7 @@
 							<span class="from-tit">推荐码:</span>
 							<div class="from-icon">
 								<img src="__PUBLIC__images/login/good.png" alt="">
-								<input type="text" placeholder="请输入推荐码" name="directname" value class="pptt recommend">
+								<input type="text" placeholder="请输入推荐码" name="directname" value="{$promotion}" readonly  unselectable="on" class="pptt recommend">
 							</div>
 						</div>
 						<div class="send-codemsg mistake info"></div>
