--- a/application/index/view/wallet_wallet.html
+++ b/application/index/view/wallet_wallet.html
@@ -10,7 +10,12 @@
     <link rel="stylesheet" href="__PUBLIC__/css/public/base.css"/>
     <link rel="stylesheet" href="__PUBLIC__/css/wallet/wallet.css"/>
     <link rel="stylesheet"  href="__PUBLIC__/font/iconfont.css"/>
-    
+    <script type="text/javascript" src="../../../public/js/jquery-1.8.3.min.js" ></script>
+    <script>
+    	$(function(){
+    		
+    	})
+    </script>
 </head>
 <body>
     <div class="user">
@@ -31,6 +36,54 @@
 					<div class="amount">
 						<span>投资额度：</span><input class="inp" type="number"/>
 					</div>	
+					
+					<div class="wtf_xiala">
+							<p><!--<img src="../../../public/images/wallet/wtf_tx.jpg" />--></p>
+							<p style="margin-left: 0.1rem;width: 25%;">Cardano</p>
+							<p style="width: 53%;text-align: right;">0.00000000</p>
+							<p class="p1" style="color: #7596d8;">ADA</p>
+							<p class="wtf_xl"><img style="width: 0.2rem;height: 0.15rem;padding-top: 0;margin-left: 0.15rem;" src="../../../public/images/wallet/wtf_xiala.jpg" /></p>
+					</div>
+						<div class="wtf_item2">
+						<div class="wtf_item2_div">
+							<p>配套额度</p >
+							<div class="wtf_item2_c">
+								<p>0.00000000</p >
+								<p>ADA</p >
+							</div>
+						</div>
+					<div class="wtf_item2_div">
+							<p>奖励钱包</p >
+							<div class="wtf_item2_c">
+								<p>0.00000000</p >
+								<p>ADA</p >
+							</div>
+						</div>
+					<div class="wtf_item2_div">
+							<p>激活钱包</p >
+							<div class="wtf_item2_c">
+								<p>0.00000000</p >
+								<p>ADA</p >
+							</div>
+						</div>
+					<div class="wtf_item2_div">
+							<p>委托最低限额</p >
+							<div class="wtf_item2_c">
+								<p class="p3" style="color: #4ecdd0;">19819.15031200</p >
+								<p>ADA</p >
+							</div>
+						</div>
+							<div class="wtf_item2_div">
+							<p>复投最低限额</p >
+							<div class="wtf_item2_c">
+								<p class="p2" style="color: #4ecdd0;">9909.57515600</p >
+								<p>ADA</p >
+							</div>
+						</div>
+					</div>
+					
+					  
+					  
 					<div class="sum">投资</div>
 					<!--总资产-弹框-->
 					<div class="assetPopup showZ">
@@ -40,23 +93,14 @@
 						<div class="currency">
 								<!-- <volist name="user_wallet" id="user_wallet"> -->
 							{foreach name="user_wallet" item="user_wallet"}
-								<span>{$user_wallet.cu_id|wallet_name}：</span>
-								<span>{$user_wallet.cu_num}</span><br>
+								<p class="termBox" onclick="obtainFun('id')">
+									<span>{$user_wallet.cu_id|wallet_name}：</span>
+									<span>{$user_wallet.cu_num}</span><br>
+								</p>
 							{/foreach}
 							<!-- </volist> -->
 						</div>
 						<i class="iconfont icon hideIcon">&#xe66f;</i>
-					</div>
-					<!--投资-弹框-->
-					<div class="assetPopup pop">
-						
-						<div class="det">币值种类</div>
-						{foreach name="htd_currency" item="htd_currency"}
-							<div class="currency ur" onclick="wallet('{$htd_currency.wallet_addr}')">
-								<span>{$htd_currency.alias_name}</span>								
-							</div>
-						{/foreach}
-						<i class="iconfont icon hideTz">&#xe66f;</i>
 					</div>
 					<!--二维码-弹框-->
 					<div class="code-up hideEvm">
@@ -135,9 +179,7 @@
         				</tr>
         			</table>
         		</div>
-        		<!--<div class="zjy_box_conten_item">
-        			<p style="text-align: center;font-size: .3rem;">暂无交易记录</p>
-        		</div>-->
+        		
         	</div>
         </div>
         <!-- 底部导航 -->
