--- a/application/index/view/My_my.html
+++ b/application/index/view/My_my.html
@@ -56,7 +56,7 @@
 								<div class="left"><img src="__PUBLIC__/images/my/ren.png" /></div>
 								<span class="username">推广码:</span>
 								<!--<span class="text">{$user.mobile}</span>-->
-								<span class="text3 text">12356899</span>
+								<span class="text3 text">{$user.promotion}</span>
 								
 							</div>
 
@@ -67,11 +67,7 @@
 			</div>
 		</div>
 		<!-- 底部导航 -->
-<<<<<<< HEAD
-		<div class="bottomNavWrap container" id="bottomNavWrap"  data-state={$ss}></div>
-=======
 		<div class="bottomNavWrap container" id="bottomNavWrap" data-state={$ss}></div>
->>>>>>> a6bffad407780c821d6383601d1e044a60c5ce43
 
 		<script src="__PUBLIC__/js/public/jquery-1.8.3.js"></script>
 		<script src="__PUBLIC__/js/my/my.js"></script>
