--- a/application/index/view/login_register.html
+++ b/application/index/view/login_register.html
@@ -23,7 +23,7 @@
 			</div>
 
 				<div class="reg-new-page">
-					<form action="{:url('index/login/regis')}" method="post" class="reg-from">
+					<form action="" method="post" class="reg-from">
 						<div class="info mistake"></div>
 						<div class="from-group">
 							<span class="from-tit">用户名:</span>
@@ -69,7 +69,8 @@
 							<span class="from-tit">推荐码:</span>
 							<div class="from-icon">
 								<img src="__PUBLIC__images/login/good.png" alt="">
-								<input type="text" placeholder="请输入推荐码" name="directname" value="{$promotion}" readonly  unselectable="on" class="pptt recommend">
+								<!-- readonly  unselectable="on" -->
+								<input type="text" placeholder="请输入推荐码" name="directname" value="{$promotion}"  class="pptt recommend">
 							</div>
 						</div>
 						<div class="send-codemsg mistake info"></div>
@@ -87,7 +88,8 @@
 							<span class="info "></span>
 						</div>
 						<div class="reg-btn">
-							<button type="button" class="btn dis" disabled=disabled>注册</button>
+							<!-- <button type="button" onclick="btn()" class="btn dis" disabled=disabled>注册</button> -->
+							<button type="button" class="btn dis">注册</button>
 						</div>
 					</form>
 					<div class="login-new">
@@ -101,89 +103,153 @@
 <script src="__PUBLIC__js/public/jquery-1.8.3.js"></script>
 <script src="__PUBLIC__js/public/publicAlert.js"></script>
 <script>
-	//注册
-	$(".btn").click(function(){
+	$(function(){
 
-		//用户名
-		var userName=($(".username").val())+"";
-		//密码
-		var  password = $(".password").val();
-		//确认密码
-		var  passworda=$(".passworda").val();
-		//邮箱email
-		var  userEmail = ($(".email").val())+"";
-		//手机号
-		var  mobiles=$(".mobile").val();
-		//直推人玛
-		var  promotions=$(".promotion").val();
-
-		//验证码
-		var verify=$(".verify").val();
-//alert(12);
-		/*
-            if(userName==""){
-                 alert("用户名不能为空");
-                 return
-            }
-
-            if(password==""){
-                    alert("密码不能为空");
-                    return
-            }
-
-            if(password!=passworda){
-                    alert("密码不一致，请重新输入");
-                    return
-              }
-
-            if(userEmail==""){
-                    alert("邮箱不能为空");
-                    return
-            }
-
-            if(mobiles==""){
-                    alert("手机号不能为空");
-                    return
-            }
-
-            if(promotions==""){
-                    alert("直推人玛不能为空");
-                    return
-            }
-
-            if(verify==""){
-                    alert("验证码不能为空");
-                    return
-            }
-            */
-		if(userName&&password&&passworda&&(password==passworda)&&userEmail&&mobiles&&promotions&&verify){
-			// alert(userName);
-			var datas={username:userName,password:password,usermail:userEmail,mobile:mobiles,promotion:promotions};
-//alert(userName+"/"+password+"/"+userEmail+"/"+mobiles+"/"+promotions);
-			$.ajax({
-				type:"POST",
-				url:"{:url('index/login/regis')}",
-				data:datas,
-				dataType:'json',
-				success:function(msg){
-					if(msg.url){
-						console.log(msg.url);
-						suredAlert($('body'),msg.msg,msg.url);
-						window.location.replace(msg.url);
-					}else{
-						alert(msg.msg);
-					}
+	
+	 //注册
+	 $(".btn").click(function(){
+        let userName = $(".username")  //用户名
+        let userPhone = $(".phone")    //手机
+        let password = $(".password")  //密码
+        let affirmpwd = $(".affirmpwd")   //确认密码
+        let userEmail = $(".email")    //邮箱
+        let rec = $(".recommend")      //推荐人
+        let verify = $(".verify")      //验证码
+        let body = $("body")
+        
+        
+        //注册用户名
+				if (userName.val() == ""){       //用户名为空
+						suredAlert(body,"用户名不能为空~");
+						userName.focus()
+						return 
+        }else if (!condition.username){  //用户名格式不正确
+                suredAlert(body,"请输入正确的用户名~");
+                userName.focus()
+                return 
+        }
+        //注册用户名密码
+        if (password.val() == ""){       //密码为空
+                suredAlert(body,"密码不能为空~");
+                password.focus()
+                return
+        }else if (!condition.pwdstate){  //用户名密码
+                suredAlert(body,"请输入正确的密码~");
+                password.focus()
+                return 
+        } 
+    
+        //确认密码
+        if(password.val() != affirmpwd.val()){  //密码不一致
+            console.log(password.val(),affirmpwd.val())
+                suredAlert(body,"输入密码不一致 请重新输入~");
+                affirmpwd.focus()
+                return
+        }
+        
+        //用户邮箱
+        if(userEmail.val() == ""){        //邮箱为空
+                suredAlert(body,"邮箱不能为空~");
+                userEmail.focus()
+                return
+        }else if (!condition.emailstate){ //用户邮箱为false
+                suredAlert(body,"请输入正确的邮箱~");
+                userEmail.focus()
+                return 
+        }
+    
+        //用户名手机
+        if(userPhone.val() == ""){    
+                suredAlert(body,"手机号码不能为空~");
+                userPhone.focus()
+                return
+        }else if (!condition.phonestate){ //用户手机号
+                suredAlert(body,"请输入正确的手机号~");
+                userPhone.focus()
+                return 
+        }
+       
+        //推荐人
+        if (!condition.referrer){    //推荐人
+            suredAlert(body,"请填写推荐人~");
+            return
+        }
+    
+        //验证码
+        if(verify.val() == ""){
+            suredAlert(body,"验证码不能为空~");
+            verify.focus()
+            return
+        }else if (!condition.securitycode){  //验证码
+            suredAlert(body,"请输入正确的验证码~");
+            verify.focus()
+            return
+        }
+        
+        //勾选协议
+        if (!condition.iconstate){      //勾选协议
+            suredAlert(body,"请勾选用户协议~");
+            return
 				}
-			});
-    }else if(password!=passworda){
-	 		 alert("密码不一致，请重新输入");
-	}
-    
-    
-    
-    
-})
+				$.ajax({
+					type:"POST",
+					url:"{:url('index/login/regis')}",
+					data:{
+						userName:userName.val(),
+						userPhone:userPhone.val(),
+						password:password.val(),
+						userEmail:userEmail.val(),
+						rec:rec.val(),
+						verify:verify.val(),
+					},
+					dataType:'json',
+					success:function(msg){
+						if(msg.url){
+							// console.log(msg.url);
+							// suredAlert($('body'),msg.msg,msg.url);
+							window.location.replace(msg.url);
+						}else{
+							suredAlert($('body'),msg.msg);
+						}
+					}
+				});
 
-	})
+        
+
+       
+        
+    
+       
+			})
+		})
+	// //注册
+	// $(".btn").click(function(){
+		// var uname = $(".username").val();
+		// var password = $(".password").val();
+		// var email = $(".email").val();
+		// var phone = $(".phone").val();
+		// var recommend = $(".recommend").val();
+		// console.log(uname);
+		// console.log(password);
+		// console.log(email);
+		// console.log(phone);
+		// console.log(recommend);
+		// $.ajax({
+		// 		type:"POST",
+		// 		url:"{:url('index/login/regis')}",
+		// 		data:datas,
+		// 		dataType:'json',
+		// 		success:function(msg){
+		// 			if(msg.url){
+		// 				console.log(msg.url);
+		// 				suredAlert($('body'),msg.msg,msg.url);
+		// 				window.location.replace(msg.url);
+		// 			}else{
+		// 				alert(msg.msg);
+		// 			}
+		// 		}
+		// 	});
+	// 	console.log(123123);
+	// });
 </script>
 </html>
