--- a/public/css/wallet/wallet.css
+++ b/public/css/wallet/wallet.css
@@ -391,3 +391,6 @@ input::-webkit-inner-spin-button {
 	width: 100%;
 	height: auto;
 }
+.termBox span{display: block}
+.termBox span:nth-child(1){width:40%;text-align: right;float: left;}
+.termBox span:nth-child(2){width:60%;text-align: left;float: left;}
