修改默认值

--- a/application/admin/view/withdrawal_lists.html
+++ b/application/admin/view/withdrawal_lists.html
@@ -28,7 +28,7 @@
 					    {case value='0'}审核中{/case}
 					    {case value='1'}通过{/case}
 					    {case value='2'}未通过{/case}
-					    {default /}default
+					    {default /}暂无状态
 					{/switch}
                 </td>
                 <td>{$vo.wallet_addr}</td>
