--- a/application/index/view/wallet_wallet.html
+++ b/application/index/view/wallet_wallet.html
@@ -69,7 +69,7 @@
 					<div class="wtf_item2_div">
 						<p>币种数量</p >
 						<div class="wtf_item2_c">
-							<p class="p3" style="color: #4ecdd0;">19819.15031200</p >
+							<p class="p3" style="color: #4ecdd0;">0.00000000</p >
 							<p></p >
 						</div>
 					</div>
@@ -92,8 +92,8 @@
 						
 						<div class="currency">
 							{foreach name="htd_currency" item="vo"}
-								<p class="termBox clearfix" onclick="obtainFun('{$vo.id}')">
-									<span>{$vo.id|wallet_name}：</span>
+								<p class="termBox clearfix" onclick="obtainFun('{$vo.id}')" name-data="{$vo.alias_name}">
+									<span>{$vo.alias_name}<font>：</font></span>
 									<span>{$vo.price}</span><br>
 								</p>
 							{/foreach}
