去首页股权

--- a/application/index/view/index_index.html
+++ b/application/index/view/index_index.html
@@ -74,12 +74,12 @@
                         <span>提币</span>
                     </a>
                 </li>
-                <li class="itemColor-8">
+                <!-- <li class="itemColor-8">
                     <a href="#">
                         <img src="__PUBLIC__/images/home/stock-icon.png" alt="">
                         <span>股权</span>
                     </a>
-                </li>
+                </li> -->
             </ul>
         </div>
 
