--- a/application/admin/view/Income_dynamic_income.html
+++ b/application/admin/view/Income_dynamic_income.html
@@ -40,19 +40,22 @@
             <tbody>
             {foreach name="income_list" item="vo"}
             <tr>
-                <td>{$vo.id}</td>
-                <td>{$vo.mobile}--{$vo.username}</td>
-                <td>层级账号</td>
+                <td>{$key+1}</td>
+                <td>{$vo.id}/{$vo.username}</td>
+                <td>11</td>
                 <td>{$vo.order_no}</td>
-                <td>投资金额</td>
-                <td>{$vo.alias_name}&nbsp;&nbsp;&nbsp;{$vo.note}</td>
-                <td>{$vo.num}</td>
+                <td>0</td>
+                <td>{$vo.cu_name}</td>
+                <td>{$vo.total_coin}</td>
                 <td>{$vo.percent}%</td>
-                <td>静态收益</td>
+                <td>{$vo.base_money}</td>
                 <td>{$vo.main_coin}</td>
                 <td>{$vo.htd_coin}</td>
                 <td>{$vo.create_time|date="Y-m-d H:i:s",###}</td>
-                <td>收益状态</td>
+                <td>{switch name='$vo.status'}
+                    {case value='0'}默认{/case}
+                    {case value='1'}禁用{/case}
+                    {/switch}</td>
             </tr>
             {/foreach}
             </tbody>
