--- a/application/admin/view/Income_info.html
+++ b/application/admin/view/Income_info.html
@@ -24,6 +24,7 @@
             <tr>
                 <th style="width: 30px;">序列号</th>
                 <th>账号</th>
+                <th>手机号</th>
                 <th>投资币种</th>
                 <th>币种价格</th>
                 <th>投资金额</th>
@@ -38,10 +39,11 @@
             {foreach name="income_list" item="vo"}
             <tr>
                 <td>{$key+1}</td>
-                <td>{$vo.uid}/{$vo.username}</td>
-                <td>{$vo.alias_name}&nbsp;&nbsp;&nbsp;{$vo.note}</td>
+                <td>{$vo.id}/{$vo.username}</td>
+                <td>{$vo.mobile}</td>
+                <td>{$vo.alias_name}{$vo.cu_id}&nbsp;&nbsp;&nbsp;{$vo.note}</td>
                 <td>{$vo.price}</td>
-                <td>投资金额</td>
+                <td>{$vo.total_money}</td>
                 <td>{$vo.num}</td>
                 <td>{$vo.create_time|date="Y-m-d H:i:s",###}</td>
                 <!--<input type="hidden" value="{$vo.voucher}" name="">-->
@@ -50,7 +52,9 @@
                 <td>{switch name='$vo.pay_way'}
                     {case value='1'}发票{/case}
                     {case value='2'}账户余额{/case}
-                    {/switch}</td>
+                    {default /}default
+                    {/switch}
+                    </td>
                 <td>
                     <a href="javascript:;" data-id="{$vo.id}" data-url="{:url('admin/CheckOrder/checkOrder',['order_id'=>$vo['id']])}" data-opt="check" class="elementcheck layui-btn layui-btn-danger layui-btn-sm ajax-delete">审核</a>
                 </td>
