--- a/application/index/view/index_index.html
+++ b/application/index/view/index_index.html
@@ -84,7 +84,7 @@
         </div>
 
         <!-- 底部导航 -->
-        <div class="bottomNavWrap container" id="bottomNavWrap"></div>
+        <div class="bottomNavWrap container" id="bottomNavWrap" data-id="{$id}"></div>
         
     </div>
     
