--- a/application/index/view/wallet_wallet.html
+++ b/application/index/view/wallet_wallet.html
@@ -11,11 +11,7 @@
     <link rel="stylesheet" href="__PUBLIC__/css/wallet/wallet.css"/>
     <link rel="stylesheet"  href="__PUBLIC__/font/iconfont.css"/>
     <script type="text/javascript" src="../../../public/js/jquery-1.8.3.min.js" ></script>
-    <script>
-    	$(function(){
-    		
-    	})
-    </script>
+    
 </head>
 <body>
     <div class="user">
@@ -158,7 +154,7 @@
         	</div>
         </div>
         <!-- 底部导航 -->
-        <div class="bottomNavWrap container" id="bottomNavWrap"></div>
+        <div class="bottomNavWrap container" id="bottomNavWrap" data-id="{$id}"></div>
     </div>
     
     <!--弹框-阴影-->
