--- a/application/index/view/wallet_wallet.html
+++ b/application/index/view/wallet_wallet.html
@@ -108,9 +108,9 @@
 					<!--二维码-弹框-->
 					<div class="code-up hideEvm">
 						<div class="site">							
-							<p class="hx">
-								地址:
-								<span id="span"></span>
+							<p class="hx">	
+								<p>地址:</p>
+								<span id="span">1111111111111111111111111111111111111111111111</span>
 							</p>
 						</div>
 						<div class="tu">
@@ -119,7 +119,7 @@
 						<i class="iconfont shut">&#xe66f;</i>
 						
 						<input type="file" id="f"  name="f" style="display:none"/>
-						<div class="notarize" onclick="f.click()" >上传凭证</div>
+												
 						<!--进度条-->
 						<div id="wrapper">
 							<div class="loader-container">
@@ -127,7 +127,10 @@
 							  <span class="runner"></span>
 							</div>
 						</div>
-						<div class="notarize" onclick="sc(this);">确认投资</div>
+						<div class="clicTK">
+							<div class="notarize" onclick="f.click()" >上传凭证</div>
+							<div class="notarize" onclick="sc(this);">确认投资</div>
+						</div>
 					</div>
         		</div>
         		<div class="zjy_box_conten_item">
