--- a/application/admin/view/withdrawal_detail.html
+++ b/application/admin/view/withdrawal_detail.html
@@ -94,7 +94,7 @@
 					      	<div class="grid-demo grid-demo-bg1">电子钱包地址</div>
 					    </div>
 					    <div class="layui-col-xs10">
-					      	<div class="grid-demo">{$detail.wallet_addr}</div>
+					      	<div class="grid-demo">{$detail.wallet_addr|default='暂无'}</div>
 					    </div>
 					</div>
 					<hr>
@@ -103,7 +103,7 @@
 					      	<div class="grid-demo grid-demo-bg1">电子钱包二维码</div>
 					    </div>
 					    <div class="layui-col-xs10">
-					      	<div class="grid-demo">{$detail.qrcode_addr}</div>
+					      	<div class="grid-demo">{$detail.qrcode_addr|default='暂无'}</div>
 					    </div>
 					</div>
 					<hr>
@@ -119,7 +119,7 @@
 								    {/case}
 								    {case value='1'}通过审核{/case}
 								    {case value='2'}未通过审核{/case}
-								    {default /}default
+								    {default /}暂无状态
 								{/switch}
 								
 						    </div>
