--- a/application/index/view/my_my.html
+++ b/application/index/view/my_my.html
@@ -67,7 +67,7 @@
 			</div>
 		</div>
 		<!-- 底部导航 -->
-		<div class="bottomNavWrap container" id="bottomNavWrap" data-id="{$id}" ></div>
+		<div class="bottomNavWrap container" id="bottomNavWrap" ></div>
 
 		<script src="__PUBLIC__/js/public/jquery-1.8.3.js"></script>
 		<script src="__PUBLIC__/js/my/my.js"></script>
