提币弹框修改

--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -98,14 +98,14 @@
 				//阻止事件冒泡
 				$('.popover_content').click(function(e) {
 					e.stopPropagation();
-					$('.true').click(function() {
-						$('.popover').hide();
-						
-					});
-					$('.false').click(function() {
-						$('.popover').hide();
-
-					});
+				});
+				//弹框确认
+				$('.true').click(function() {
+					$('.popover').hide();
+				});
+				//弹框取消
+				$('.false').click(function() {
+					$('.popover').hide();
 				});
 				//点击背景隐藏
 				$('.popover').click(function() {
