--- a/public/css/home/present.css
+++ b/public/css/home/present.css
@@ -117,16 +117,20 @@
 	position: relative;
 	width: 100%;
 	height: auto;
-	padding-bottom: 1rem;
-	line-height: 1rem;
+	padding: .5rem 0 1.2rem 0;
+	line-height: 1.25rem;
 	margin-top: 4rem;
 	text-align: center;
 	background: #404786;
 	border-radius: .1rem;
 }
 .popover .popover_content input{
-	margin-left: .05rem;
+	margin-left: .1rem;
 	background: #f5f5f5;
+}
+.popover .popover_content input:nth-child(6){
+	color: #f5f5f5;
+	background: transparent;
 }
 .popover .popover_affirm{
 	width: 100%;
