--- a/public/css/login/login.css
+++ b/public/css/login/login.css
@@ -2,10 +2,6 @@
 登录样式表
 */
 body {
-    width: 100%;
-    height: 100vh;
-    font-size: 0.24rem;
-    font-family: "PingFangMedium";
     background: -moz-linear-gradient(top, #2866a3 0%, #5ebfc8 100%);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #2866a3), color-stop(100%, #5ebfc8));
     background: -webkit-linear-gradient(top, #2866a3 0%, #5ebfc8 100%);
@@ -14,7 +10,12 @@ body {
 }
 
 .header-zp{
-    background-color: transparent;
+    /* background-color: transparent; */
+	background: -moz-linear-gradient(top, #2866a3 0%, #2866a3 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #2866a3), color-stop(100%, #2866a3));
+	background: -webkit-linear-gradient(top, #2866a3 0%, #2866a3 100%);
+	background: -o-linear-gradient(top, #2866a3 0%, #2866a3 100%);
+	background: -ms-linear-gradient(top, #2866a3 0%, #2866a3 100%);
 }
 
 .loginbox{
@@ -44,7 +45,7 @@ body {
 
  .from-group .from-icon{
     display: inline-block;
-    border: .01rem solid #ffffff;
+    border: 1px solid #ffffff;
     width: 80%;    
     border-radius: .1rem;
     height:.8rem;
@@ -67,19 +68,20 @@ body {
  
 .from-group input{
     padding-left:.1rem;
-    font-size: .2rem;
+    font-size: .3rem;
     width: 85%; 
     height:.8rem;
+	color: #ffffff;
 }
  .info.mistake {
     color: red;
+	font-size: .3rem;
 }
 
-.info {
+.info{
     height: .5rem;
-    text-align: center;
-    width: 80%;
     line-height: .5rem;
+    padding-left: 2rem;
 }
 
  .btn{
