--- a/public/css/login/retrieve.css
+++ b/public/css/login/retrieve.css
@@ -3,15 +3,20 @@
 */
 
 body {
-    width: 100%;
-    height: 100vh;
-    font-size: 0.24rem;
-    font-family: "PingFangMedium";
-    background: -moz-linear-gradient(top, #1de5e2 0%, #b588f7 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #1de5e2), color-stop(100%, #b588f7));
-    background: -webkit-linear-gradient(top, #1de5e2 0%, #b588f7 100%);
-    background: -o-linear-gradient(top, #1de5e2 0%, #b588f7 100%);
-    background: -ms-linear-gradient(top, #1de5e2 0%, #b588f7 100%);
+    background: -moz-linear-gradient(top, #2866a3 0%, #5ebfc8 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #2866a3), color-stop(100%, #5ebfc8));
+    background: -webkit-linear-gradient(top, #2866a3 0%, #5ebfc8 100%);
+    background: -o-linear-gradient(top, #2866a3 0%, #5ebfc8 100%);
+    background: -ms-linear-gradient(top, #2866a3 0%, #5ebfc8 100%);
+}
+
+.header-zp{
+    /* background-color: transparent; */
+	background: -moz-linear-gradient(top, #2866a3 0%, #2866a3 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #2866a3), color-stop(100%, #2866a3));
+	background: -webkit-linear-gradient(top, #2866a3 0%, #2866a3 100%);
+	background: -o-linear-gradient(top, #2866a3 0%, #2866a3 100%);
+	background: -ms-linear-gradient(top, #2866a3 0%, #5ebfc8 100%);
 }
 .retrievebox{
 	padding-top: .88rem;
@@ -26,72 +31,104 @@ body {
 
 .retrieve-new-page{
     padding:.2rem .3rem .2rem .3rem;
-    padding-top: .88rem;
     box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
 }
 
 .from-group{
-    position: relative;
-    background: #ffffff;
+    display: flex;
+    display: -webkit-box; 
+    display: -moz-box; 
+    display: -webkit-flex; 
+    display: -moz-flex; 
+    display: -ms-flexbox; 
     border-radius: .2rem;
     height: .8rem;
     line-height: .8rem;
-    background: -moz-linear-gradient(left, #facd68 0%, #fc76b3 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #facd68), color-stop(100%, #fc76b3));
-    background: -webkit-linear-gradient(left, #facd68 0%, #fc76b3 100%);
-    background: -o-linear-gradient(left, #facd68 0%, #b588f7 100%);
-    background: -ms-linear-gradient(left, #facd68 0%, #b588f7 100%);
+    width: 100%;
+    background-color: transparent;
  }
 
  .from-group .from-cc{
     font-size: .3rem;
-    color: #1153f3;
     padding-left: .1rem;
- }
- .from-group .from-tit {
-    display: inline-block;
-    width: 1.2rem;
-    font-size: .3rem;
-    color: #1153f3;
-    padding-left: .1rem;
-}
- .from-group input{
-    padding-left:.1rem;
-    color: #17223b;
-    font-size: .3rem;
-    height:.8rem;
  }
 
+.from-tit {
+    display: inline-block;
+    width: 25%;
+    font-size: .3rem;
+    color: #ffffff;
+    padding-left: .1rem;
+}
+
+.from-group .from-icon{
+    display: inline-block;
+    border: 1px solid #ffffff;
+    width: 80%;
+    border-radius: .1rem;
+    height:.8rem;
+}
+/* 输入栏图片 */
+.from-group .from-icon img{
+    padding-left: .3rem;
+    height:.3rem;
+    width: .3rem;
+    vertical-align: middle;
+}
+/* 输入框样式 */
+.from-group input {
+    padding-left: .1rem;
+    font-size: .3rem;
+    width: 84%;
+    height: .8rem;
+    color: #ffffff;
+}
+/* 验证码样式 */
+ .from-group .from-verify{
+    width: 60%;    
+ }
+ .from-group .from-icon .verify {
+    width: 79%;
+}
+
+/* 验证码按钮样式 */
  .from-group .acquire{
     border: 0;
-    background: #08c792;
-    width: 2.12rem;
+    background: -moz-linear-gradient(top, #d224d5 0%, #d296e2 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #d224d5), color-stop(100%, #d296e2));
+    background: -webkit-linear-gradient(top, #d224d5 0%, #d296e2 100%);
+    background: -o-linear-gradient(top, #d224d5 0%, #d296e2 100%);
+    background: -ms-linear-gradient(top, #d224d5 0%, #d296e2 100%);
+    width: 20%;
     height: .8rem;
     border-radius: .2rem;
     color: #ffffff;
-    font-size: .3rem;
-    position: absolute;
-    right: 0rem;
-    bottom: 0rem;
- }
+    font-size: .2rem;
+}
 
-  .btn{
-    margin-top:.5rem;
+/* 提交按钮初始样式 */
+.btn{
+    margin-top:.4rem;
     width: 100%;
     height: .8rem;
-    color: #ffffff;
+    color: #1153f3;
     border: 0;
     font-size: .3rem;
     border-radius: .2rem;
 }
- .dis{
-     background: -moz-linear-gradient(left, #b0b0b0 0%, #17223b 100%);
-     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #b0b0b0), color-stop(100%, #17223b));
-     background: -webkit-linear-gradient(left, #b0b0b0 0%, #17223b 100%);
-     background: -o-linear-gradient(left, #b0b0b0 0%, #17223b 100%);
-     background: -ms-linear-gradient(left, #b0b0b0 0%, #17223b 100%);
- }
 
+/* 按钮禁用样式 */
+.dis{
+    background: -moz-linear-gradient(left, #b0b0b0 0%, #95c5d6 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #b0b0b0), color-stop(100%, #95c5d6));
+    background: -webkit-linear-gradient(left, #b0b0b0 0%, #95c5d6 100%);
+    background: -o-linear-gradient(left, #b0b0b0 0%, #95c5d6 100%);
+    background: -ms-linear-gradient(left, #b0b0b0 0%, #95c5d6 100%);
+}
+
+/* 按钮样式 */
  .active{
     background: -moz-linear-gradient(left, #1de5e2 0%, #1153fc 100%);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #1de5e2), color-stop(100%, #1153fc));
@@ -99,27 +136,30 @@ body {
     background: -o-linear-gradient(left, #1de5e2 0%, #1153fc 100%);
     background: -ms-linear-gradient(left, #1de5e2 0%, #1153fc 100%);
  }
+ /* 提示文字样式 */
     .info.mistake {
         color: red;
+		font-size: .3rem;
     }
-    
-    .info {
-        height: .3rem;
-        text-align: center;
-        padding-right: 3rem;
-    }
-     .pptt::-webkit-input-placeholder { /* WebKit browsers */
-        color:#637fbe
-    }
-    
-    .pptt:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
-        color:#637fbe
-    }
-    
-    .pptt::-moz-placeholder { /* Mozilla Firefox 19+ */
-    color:#637fbe
-    }
-    
-    .pptt:-ms-input-placeholder { /* Internet Explorer 10+ */
-    color: #637fbe
-    }
+/* 提示栏样式 */
+.info{
+    height: .5rem;
+    line-height: .5rem;
+    padding-left: 2rem;
+}
+/* 输入框字体颜色 */
+.pptt::-webkit-input-placeholder { /* WebKit browsers */
+    color:#b8c9cf
+}
+
+.pptt:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+    color:#b8c9cf
+}
+
+.pptt::-moz-placeholder { /* Mozilla Firefox 19+ */
+color:#b8c9cf
+}
+
+.pptt:-ms-input-placeholder { /* Internet Explorer 10+ */
+color: #b8c9cf
+}
