--- a/public/css/wallet/wallet.css
+++ b/public/css/wallet/wallet.css
@@ -1,4 +1,6 @@
-
+body {
+	overflow: hidden;
+}
 .active{
 	display: block !important;
 }
@@ -101,7 +103,7 @@ th,td{
 }
 
 .sum {
-	margin: 15% auto;
+	margin: 5% auto;
 	width: 70%;
 	height: 1rem;
 	background: #1eb0d4;
@@ -121,7 +123,7 @@ th,td{
 	display: none;
 	position: absolute;
 	top: 15%;
-	left: 5%;
+	left: 4.1%;
 	z-index: 5;
 	width: 90%;
 	height: 9.5rem;
@@ -135,12 +137,7 @@ th,td{
 	font-size: .35rem;
 	text-align: center;
 }
-.assetPopup .iconfont {
-	position: absolute;
-	top: 2px;
-	right: 0;
-	font-size: .75rem;
-}
+
 
 /*二维码-弹框*/
 .code-up {
@@ -164,9 +161,9 @@ th,td{
 }
 .code-up .shut {
 	position: absolute;
-	top: -2px;
-	right: 0;
-	font-size: .75rem;
+	top: 0;
+	right: 1px;
+	font-size: .6rem;
 }
 .code-up .site {
 	margin: 5% 0;
@@ -200,13 +197,24 @@ th,td{
 }
 
 .det {
+	position: fixed;
+	width: 90%;
 	font-size: .35rem;
 	font-weight: 900;
 	line-height: .7rem;
+	letter-spacing: 5px;
 	color: #000;
 	text-align: center;
 	background: linear-gradient(left,#ffcb52,#ff7b02);
 	background: -webkit-linear-gradient(left,#ffcb52,#ff7b02);
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+}
+.assetPopup .iconfont {
+	position: fixed;
+	top: 2.35rem;
+	right: .45rem;
+	font-size: .6rem;
 }
 /*进度条*/
 .loader-container {
@@ -394,3 +402,43 @@ input::-webkit-inner-spin-button {
 .termBox span{display: block}
 .termBox span:nth-child(1){width:40%;text-align: right;float: left;}
 .termBox span:nth-child(2){width:60%;text-align: left;float: left;}
+
+/*<!--总投资-弹框-->*/
+.thead-zp {
+	padding-top: .7rem;
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+}
+.thead-zp ul{
+    height: 0.6rem;
+    display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+    align-items: center;
+    justify-content: space-around;
+    font-size: 0.3rem;
+    color: #fff;
+}
+.thead-zp ul li{
+    width: 25.5%;
+    text-align: center;
+}
+
+.tbody-zp ul li{
+    height: 0.6rem;
+    display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+    align-items: center;
+    justify-content: space-around;
+    color: #fff;
+    font-size: 0.26rem;
+}
+.tbody-zp ul li div{
+    width: 25.5%;
+    text-align: center;
+}
