--- a/application/index/view/login_index.html
+++ b/application/index/view/login_index.html
@@ -18,7 +18,7 @@
         
 					<div class="header-zp">
 						<span class="return" onclick="javascript:history.back(-1)">
-							<!--<img src="../image/public/return-zp@2x.png" />-->
+							<img src="../image/public/return-zp@2x.png" />
 						</span>
 						<h3>登录</h3>
 					</div>
@@ -100,9 +100,6 @@ $(function(){
 			success:function(msg){
 				console.log(msg);
 				suredAlert($('body'),msg.msg,msg.url);
-				// alert(msg.msg);
-
-				// window.location.href=window.location;
 
 			}
 
