提币弹框样式修改

--- a/public/css/home/present.css
+++ b/public/css/home/present.css
@@ -127,6 +127,9 @@
 .popover .popover_content input{
 	margin-left: .1rem;
 	background: #f5f5f5;
+	padding-left: .05rem;
+	line-height: .45rem;
+	border-radius:.08rem; 
 }
 .popover .popover_content input:nth-child(6){
 	color: #f5f5f5;
