修改投资模块信息

--- a/application/admin/view/currency_edit.html
+++ b/application/admin/view/currency_edit.html
@@ -25,15 +25,15 @@
                     </div>
                 </div>
                 <div class="layui-form-item">
-                    <label class="layui-form-label">币种提示</label>
+                    <label class="layui-form-label">钱包地址</label>
                     <div class="layui-input-inline">
-                        <input type="text" name="note"  value="{$res['note']}" placeholder="请输入币种提示" class="layui-input txt">
+                        <input type="text" name="wallet_addr"  value="{$res['wallet_addr']}" placeholder="请输入币种地址" class="layui-input txt">
                     </div>
                 </div>
                 <div class="layui-form-item">
-                    <label class="layui-form-label">钱包地址</label>
+                    <label class="layui-form-label">备注信息</label>
                     <div class="layui-input-inline">
-                        <input type="text" name="wallet_addr"  value="{$res['note']}" placeholder="请输入币种地址" class="layui-input txt">
+                        <input type="text" name="note"  value="{$res['note']}" placeholder="请输入币种提示" class="layui-input txt">
                     </div>
                 </div>
                 <div class="layui-form-item">
