--- a/application/admin/view/currency_index.html
+++ b/application/admin/view/currency_index.html
@@ -29,7 +29,7 @@
                         <th>状态</th>
                         <th>钱包地址</th>
                         <th>当前价格(CNY)</th>
-                        <th>币种提示</th>
+                        <th>备注信息</th>
                         <th>操作</th>
                     </tr>
                     </thead>
