--- a/application/index/view/my_my.html
+++ b/application/index/view/my_my.html
@@ -22,11 +22,9 @@
 				<div class="header-zp">
 					<span class="return" onclick="returnFun()"><img src="__PUBLIC__/images/public/return-zp@2x.png" /></span>
 					<h3>我的</h3>
-					<a href="{:url('my/editUser')}">
-						<span class="share-btn bottmBut">
-							<img src="__PUBLIC__/images/public/share-btn-zp.png" />
-						</span>
-					</a>
+					<span class="share-btn bottmBut" onclick="jumpFun('editUser.html')">
+						<img src="__PUBLIC__/images/public/share-btn-zp.png" />
+					</span>
 				</div>
 				
 				
