--- a/application/index/view/My_my.html
+++ b/application/index/view/My_my.html
@@ -22,9 +22,11 @@
 				<div class="header-zp">
 					<span class="return" onclick="returnFun()"><img src="__PUBLIC__/images/public/return-zp@2x.png" /></span>
 					<h3>我的</h3>
-					<span class="share-btn bottmBut" onclick="jumpFun('editUser.html')">
-						<img src="__PUBLIC__/images/public/share-btn-zp.png" />
-					</span>
+					<a href="{:url('my/editUser')}">
+						<span class="share-btn bottmBut">
+							<img src="__PUBLIC__/images/public/share-btn-zp.png" />
+						</span>
+					</a>
 				</div>
 				
 				
