提交钱包模块

--- a/application/index/view/wallet_wallet.html
+++ b/application/index/view/wallet_wallet.html
@@ -33,7 +33,7 @@
 					</div>	
 					
 					<div class="amount">
-						<span>投资额度：</span><input class="inp" type="number" value=""/>
+						<span>投资额度：</span><input class="inp" type="number" value="" placeholder="请输入人民币"/>
 					</div>	
 					
 					<div class="wtf_xiala">
@@ -44,13 +44,6 @@
 							<p class="wtf_xl"><img style="width: 0.2rem;height: 0.15rem;padding-top: 0;margin-left: 0.15rem;" src="../../../public/images/wallet/wtf_xiala.jpg" /></p>
 					</div>
 					<div class="wtf_item2">
-					<div class="wtf_item2_div">
-						<p>最低投资额度</p >
-						<div class="wtf_item2_c">
-							<p class="min_money">{$min_money}</p >
-							<p>CNY</p >
-						</div>
-					</div>
 					<div class="wtf_item2_div">
 						<p>当前投资额度</p >
 						<div class="wtf_item2_c">
