--- a/application/admin/view/Income_push_income.html
+++ b/application/admin/view/Income_push_income.html
@@ -41,11 +41,11 @@
             {foreach name="income_list" item="vo"}
             <tr>
                 <td>{$key+1}</td>
-                <td>{$vo.id}/{$vo.username}</td>
+                <td>{$vo.uid}/{$vo.username}</td>
                 <td>111</td>
                 <td>{$vo.order_no}</td>
                 <td>2</td>
-                <td>{$vo.cu_name}</td>
+                <td>{$vo.alias_name}</td>
                 <td>{$vo.total_coin}</td>
                 <td>{$vo.percent}%</td>
                 <td>{$vo.base_money}</td>
@@ -70,3 +70,4 @@
         {$income_list->render()}
     </div>
 </div>
+{/block}
